version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Mechanical/Fields/Adapters/DSPSDLoadAdapter.rst.txt
.. vale off



:class:`DSPSDLoadAdapter`
=========================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Mechanical.Fields.Adapters.DSPSDLoadAdapter

   Bases: :py:obj:`object`


   
   Adapter dedicated to IDSRSLoad objects.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DSPSDLoadAdapter

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ChangeFieldDefinitionType`
            - ChangeFieldDefinitionType method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FieldProvider`
            - Gets the wrapped object from Mechanical.







Property detail
---------------
.. py:property:: FieldProvider
   :type: Optional[Ansys.Common.Interop.DSObjects.IDSBCInformation]

   
   Gets the wrapped object from Mechanical.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ChangeFieldDefinitionType(componentType: Ansys.Common.Interop.CAERepObjects.AnsBCLVType, newType: Ansys.Common.Interop.AnsMaterial.kEDDataType) -> None

   
   ChangeFieldDefinitionType method.

   ..
       !! processed by numpydoc !!



.. vale on