version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Mechanical/Fields/Adapters/DSPSDLoadAdapter.rst.txt
.. vale off



:class:`DSPSDLoadAdapter`
=========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Mechanical.Fields.Adapters.DSPSDLoadAdapter

   Bases: :py:obj:`object`


   
   Adapter dedicated to IDSRSLoad objects.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DSPSDLoadAdapter

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ChangeFieldDefinitionType`
            - ChangeFieldDefinitionType method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FieldProvider`
            - Gets the wrapped object from Mechanical.







Property detail
---------------
.. py:property:: FieldProvider
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSPSDLoadAuto]


   
   Gets the wrapped object from Mechanical.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ChangeFieldDefinitionType(componentType: Ansys.Common.Interop.CAERepObjects.AnsBCLVType, newType: Ansys.Common.Interop.AnsMaterial.kEDDataType) -> None

   
   ChangeFieldDefinitionType method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on